# docker-ccache-example

./: CMakeLists.txt  Dockerfile  README.md  something.txt
src/: lib.cpp  lib.h  main.cpp
